<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.android.print.demo.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.android.print.demo.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.android.print.demo.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third">

        <action
            android:id="@+id/action_ThirdFragment_to_FourthFragment"
            app:destination="@id/FourthFragment"   />
        <action
            android:id="@+id/action_ThirdFragment_to_FinalthFragment"
            app:destination="@id/FinalFragment"/>
    </fragment>
    <fragment
        android:id="@+id/FourthFragment"
        android:name="com.android.print.demo.FourthFragment"
        android:label="@string/fourth_fragment_label"
        tools:layout="@layout/fragment_fourth">

        <action
            android:id="@+id/action_FourthFragment_to_FifthFragment"
            app:destination="@id/FifthFragment"/>
    </fragment>
    <fragment
        android:id="@+id/FifthFragment"
        android:name="com.android.print.demo.FifthFragment"
        android:label="@string/fifth_fragment_label"
        tools:layout="@layout/fragment_fifth">

        <action
            android:id="@+id/action_FifthFragment_to_FinalFragment"
            app:destination="@id/FinalFragment"/>
        <action
            android:id="@+id/action_FifthFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"/>
    </fragment>
    <fragment
        android:id="@+id/FinalFragment"
        android:name="com.android.print.demo.FinalFragment"
        android:label="@string/final_fragment_label"
        tools:layout="@layout/fragment_final">

        <action
            android:id="@+id/action_FifthFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"/>
    </fragment>
</navigation>